# Al_backend_cplusplus

./: .gitignore  CMakeLists.txt  README.md
src/: README.md  test.py  vector_add.cpp  vector_add.py  vector_add.pyd
src/activations/: activations.cpp  binding_activations.cpp
src/backend/core/: binding_matrix_operations.cpp  matrix_operations.cpp  matrix_operations.py
